Update check-secret contract to latest Hyli

--- a/check-secret-noir/frontend/index.html
+++ b/check-secret-noir/frontend/index.html
@@ -117,7 +117,7 @@
       }
 
       .input-container.with-suffix::after {
-        content: ".check_secret";
+        content: "@check_secret";
         position: absolute;
         right: 10px;
         top: 50%;
