--- a/check-secret-noir/frontend/index.html
+++ b/check-secret-noir/frontend/index.html
@@ -217,7 +217,7 @@
 
             <p>
               The password is passed as private input of a noir circuit. The
-              Noir proof is sent as a ProofTransaction to the Hyle network to be
+              Noir proof is sent as a ProofTransaction to the Hyli network to be
               verified and settle the BlobTransaction.
             </p>
           </div>
